DMP-1794 Changed media file extension check to getMediaFormat (#786)