@@ -49,7 +49,6 @@ import static uk.gov.hmcts.darts.common.enums.ObjectDirectoryStatusEnum.STORED;
 @SuppressWarnings({"PMD.ExcessiveImports"})
 class InboundToUnstructuredProcessorImplTest {
 
-    public static final String TEST_MP_2 = "test.mp2";
     public static final int MAX_FILE_SIZE_VALID = 100;
     public static final String MP_2 = "mp2";
     public static final String TEST_DOC = "test.doc";
@@ -127,7 +126,7 @@ class InboundToUnstructuredProcessorImplTest {
         when(externalLocationTypeRepository.getReferenceById(1)).thenReturn(externalLocationTypeInbound);
         when(externalObjectDirectoryEntityInbound.getMedia()).thenReturn(mediaEntity);
 
-        when(mediaEntity.getMediaFile()).thenReturn(TEST_MP_2);
+        when(mediaEntity.getMediaFormat()).thenReturn("mp2");
         when(mediaEntity.getFileSize()).thenReturn((long) binaryData.toString().length());
         when(mediaEntity.getChecksum()).thenReturn(calculatedChecksum);
         when(objectDirectoryStatusEntityStored.getId()).thenReturn(2);
@@ -209,7 +208,7 @@ class InboundToUnstructuredProcessorImplTest {
             .thenReturn(objectDirectoryStatusEntityStored);
         when(objectDirectoryStatusEntityFailureChecksum.getId()).thenReturn(7);
 
-        when(mediaEntity.getMediaFile()).thenReturn(TEST_MP_2);
+        when(mediaEntity.getMediaFormat()).thenReturn("mp2");
         when(mediaEntity.getFileSize()).thenReturn((long) binaryData.toString().length());
         when(mediaEntity.getChecksum()).thenReturn(calculatedChecksum);
         when(objectDirectoryStatusEntityStored.getId()).thenReturn(2);
@@ -309,7 +308,7 @@ class InboundToUnstructuredProcessorImplTest {
 
         when(externalLocationTypeRepository.getReferenceById(1)).thenReturn(externalLocationTypeInbound);
         when(externalObjectDirectoryEntityInbound.getMedia()).thenReturn(mediaEntity);
-        when(mediaEntity.getMediaFile()).thenReturn("test.error");
+        when(mediaEntity.getMediaFormat()).thenReturn("mp2");
         when(mediaEntity.getFileSize()).thenReturn((long) binaryData.toString().length());
         when(mediaEntity.getChecksum()).thenReturn(calculatedChecksum);
 
@@ -345,7 +344,7 @@ class InboundToUnstructuredProcessorImplTest {
 
         when(externalLocationTypeRepository.getReferenceById(1)).thenReturn(externalLocationTypeInbound);
         when(externalObjectDirectoryEntityInbound.getMedia()).thenReturn(mediaEntity);
-        when(mediaEntity.getMediaFile()).thenReturn(TEST_DOC);
+        when(mediaEntity.getMediaFormat()).thenReturn("mp2");
         when(mediaEntity.getFileSize()).thenReturn((long) binaryData.toString().length());
         when(mediaEntity.getChecksum()).thenReturn("invalid-checksum");
         when(objectDirectoryStatusEntityFailureChecksum.getId()).thenReturn(7);
@@ -353,7 +352,7 @@ class InboundToUnstructuredProcessorImplTest {
         when(objectDirectoryStatusRepository.getReferenceById(2)).thenReturn(objectDirectoryStatusEntityStored);
         when(objectDirectoryStatusRepository.getReferenceById(7)).thenReturn(objectDirectoryStatusEntityFailureChecksum);
         when(objectDirectoryStatusRepository.getReferenceById(9)).thenReturn(objectDirectoryStatusEntityAwaiting);
-        when(audioConfigurationProperties.getAllowedExtensions()).thenReturn(Arrays.asList("doc", "docx"));
+        when(audioConfigurationProperties.getAllowedExtensions()).thenReturn(List.of("mp2"));
         when(audioConfigurationProperties.getMaxFileSize()).thenReturn(MAX_FILE_SIZE_VALID);
         when(dataManagementService.getBlobData(any(), any())).thenReturn(binaryData);
         List<ExternalObjectDirectoryEntity> inboundList = new ArrayList<>(Collections.singletonList(externalObjectDirectoryEntityInbound));
@@ -379,7 +378,7 @@ class InboundToUnstructuredProcessorImplTest {
 
         when(externalLocationTypeRepository.getReferenceById(1)).thenReturn(externalLocationTypeInbound);
         when(externalObjectDirectoryEntityInbound.getMedia()).thenReturn(mediaEntity);
-        when(mediaEntity.getMediaFile()).thenReturn("test.doc");
+        when(mediaEntity.getMediaFormat()).thenReturn("mp2");
         when(mediaEntity.getFileSize()).thenReturn((long) binaryData.toString().length());
         when(mediaEntity.getChecksum()).thenReturn(calculatedChecksum);
         when(objectDirectoryStatusEntityFailureFileSize.getId()).thenReturn(5);
@@ -387,7 +386,7 @@ class InboundToUnstructuredProcessorImplTest {
         when(objectDirectoryStatusRepository.getReferenceById(2)).thenReturn(objectDirectoryStatusEntityStored);
         when(objectDirectoryStatusRepository.getReferenceById(5)).thenReturn(objectDirectoryStatusEntityFailureFileSize);
         when(objectDirectoryStatusRepository.getReferenceById(9)).thenReturn(objectDirectoryStatusEntityAwaiting);
-        when(audioConfigurationProperties.getAllowedExtensions()).thenReturn(Arrays.asList("doc", "docx"));
+        when(audioConfigurationProperties.getAllowedExtensions()).thenReturn(List.of("mp2"));
         when(audioConfigurationProperties.getMaxFileSize()).thenReturn(1);
         when(dataManagementService.getBlobData(any(), any())).thenReturn(binaryData);
         List<ExternalObjectDirectoryEntity> inboundList = new ArrayList<>(Collections.singletonList(externalObjectDirectoryEntityInbound));
@@ -414,7 +413,7 @@ class InboundToUnstructuredProcessorImplTest {
         when(externalLocationTypeRepository.getReferenceById(1)).thenReturn(externalLocationTypeInbound);
 
         when(externalObjectDirectoryEntityInbound.getMedia()).thenReturn(mediaEntity);
-        when(mediaEntity.getMediaFile()).thenReturn("test.doc");
+        when(mediaEntity.getMediaFormat()).thenReturn("mp2");
         when(mediaEntity.getFileSize()).thenReturn((long) binaryData.toString().length());
         when(mediaEntity.getChecksum()).thenReturn(calculatedChecksum);
 
@@ -427,7 +426,7 @@ class InboundToUnstructuredProcessorImplTest {
         when(objectDirectoryStatusRepository.getReferenceById(2)).thenReturn(objectDirectoryStatusEntityStored);
         when(objectDirectoryStatusRepository.getReferenceById(9)).thenReturn(objectDirectoryStatusEntityAwaiting);
 
-        when(audioConfigurationProperties.getAllowedExtensions()).thenReturn(Arrays.asList("doc", "docx"));
+        when(audioConfigurationProperties.getAllowedExtensions()).thenReturn(List.of("mp2"));
         when(audioConfigurationProperties.getMaxFileSize()).thenReturn(100);
 
         when(dataManagementService.getBlobData(any(), any())).thenReturn(binaryData);
